--- a/background.tex
+++ b/background.tex
@@ -1,3 +1,6 @@
+We demonstrate the motivation behind \goat by describing the concurrency model of Go and the common causes and symptoms of concurrent bugs in Go.
+%
+In section
 %\input{tabs/moby28462}
 \input{tabs/moby28462_minipage}
 %\input{tabs/moby28462_minipage_codeOnly}
@@ -28,6 +31,7 @@ However, the support for blocking bugs such as deadlocks and Go-specific bug-hun
 
 
 
+%\input{tabs/moby28462}
 
 %\stcmtside{Explaining the example to motivate}
 Listing \ref{listing:moby28462.minipage} shows a simplified version of a reported bug in Docker \cite{moby-28462-commit}.
@@ -84,7 +88,7 @@ Based on a proposed bug taxonomy for Go \cite{tu-concurrentBugs-asplos19}, bugs 
 %
 Blocking bugs historically refer to situations where one or more processing units (\eg goroutines) are blocked, waiting for an external signal to resume (\eg leak situation in listing \ref{listing:moby28462.minipage}.
 %
-The observed causes of such blocking flaw in the context of Go are as follows:
+The observed causes of such blocking flaws in the context of Go are as follows:
 
 \begin{itemize}
   \item \textit{Resource deadlocks}: Go inherits resource deadlocks from multithreaded languages like Java and C/Pthreads where goroutines are trapped in a circular wait for the resource (\eg mutex) that is held by other goroutines.
@@ -94,8 +98,11 @@ The observed causes of such blocking flaw in the context of Go are as follows:
 \stcmtside{about race}
 Go inherited traditional non-blocking bugs such as data races and atomicity violations from older concurrent languages while introducing new bug idioms due to its new concepts such as anonymous functions \cite{tu-concurrentBugs-asplos19}.
 %
+In this work, our focus is on blocking bugs.
 
-\noindent{\bf Application-level non-determinism:\/}
+%
+\stcmt{below: Application-level non-determinism makes debugging more difficult}
+%\noindent{\bf Application-level non-determinism:\/}
 In addition to the non-deterministic nature of concurrent languages caused by the scheduler and interaction between concurrent components, Go introduces some level of non-determinism at the application level.
 %
 The \textit{select-case} statement (similar to switch-case) allows the goroutine to wait on multiple channel operations.
@@ -106,60 +113,70 @@ If none of the cases are ready, the executing goroutine is blocked unless there 
 %
 The default case makes the select non-blocking and prevents the goroutine from waiting for unavailable communications.
 %
-Such random behavior expands the schedule-space exploration, especially when select statements are used in nested fashion within nested loops.
+Such random behavior expands the interleaving space, especially when select statements are used in nested fashion within nested loops.
 %
 Hence, root-causing the misbehaved execution of a buggy program becomes more challenging.
 %
 Our experiments/observations (section or table \ref{} **FIXME**) demonstrate that select statements are in the core of rare bugs.
 
 
-\subsection{Execution Concurrency Tracing (ECT)}
-\label{sec:ect}
-The primary cause of most real-world concurrent bugs is the misuse of concurrency features like channels, mutexes, and waitGroups (table \ref{tab:comparison}).
+\subsection{Accelerating Bug Exposure}
+As we have shown in figure \ref{fig:rare_bugs}, there are cases that the bug is hidden within  the interleaving space.
 %
-To gain insight into the behavior of concurrency features during execution, we equipped \goat with a tracing mechanism~\cite{ect-arxiv}, which is an extension to the Go built-in tracer package~\cite{go-cmd-trace}.
+It is proved that context-switches before synchronization/serialization operations in concurrent programs increases the probability of finding rare concurrent bugs \cite{burckhardt-depthBug-asplos10}.
 %
-The tracing capability is compiled into all programs always through the runtime and is enabled on demand -- when tracing is disabled, it has minimal runtime overhead \cite{go-exec-tracer-doc}.
+For example, a rare context-switch right after the select statement in line \ref{bugListing:Monitor_select} causes the lock operation on mutex $m$ in line \ref{bugListing:Monitor_case_def_lock} of goroutine \texttt{Monitor} to \textit{block} goroutine \texttt{StatusChange} on locking $m$ in line \ref{bugListing:statChange_lock} and causing a deadlock.
 %
-%We chose the tracer package to enhance because it 1) is already compiled into the runtime, 2) adds minimal overhead, and 3) only lacks some pieces allowing the construction of an accurate concurrency model.
+Concurrency primitive usages are the \textit{critical points} in the program because their behavior directly impacts the blocking behavior of Go programs.
+%
+In \goat, we statically identify such critical points and inject random and bounded number of delays before
+each concurrency primitive usage.
 %
 
-\textit{Execution concurrency trace} (ECT) is a totally ordered \textit{sequence} of events in which the order is approximated through a central clock with nanosecond precision.
+
+\subsection{Testing Coverage Analysis}
+\label{sec:coverage}
+To demonstrate that testing has been thorough, \textit{coverage metrics} are defined to measure the progress of tests and specify testing termination condition.
 %
-ECT also contains the call-stack for each event, enabling a direct mapping of events to source-line numbers.
+Coverage metric for the set of testing executions $\mathcal{T}$ is a set of \textit{requirements} $\mathcal{R}$ that should get covered during testing iterations.
 %
-The alphabet of ECT is total of 63 events -- 49 from original tracer package \cite{goParserSource}, categorized and summarized in table \ref{tab:events} and 14 additional events that we added to capture concurrency usage events:
+We say requirement $R_i$ is covered during testing iteration $t \in \mathcal{T}$ if we can correlate an \textit{action} during execution of $t$ to $R_i$.
 %
+For example, in \textit{statement coverage}, which is a widely-used metric in testing sequential software, $R$ is the set of source locations (file and line numbers) in the target program
+%
+$R_i$ is covered by test execution $t$ if the statement at location $R_i$ is executed in $t$.
+%
+The \textit{coverage percentage} of a test $\mathcal{T}$ is the ratio of the requirements covered by at least one execution over the number of all requirements ($|R|$).
+
+As explained in section \ref{sec:bg}, concurrent software testing frameworks perform testing iterations to explore the schedule-space and expose flaws.
+%
+Depending on the class of target bug, different coverage metrics are proposed and used for concurrent software testing.
+%
+\textit{Synchronization} coverage metrics such as \textit{blocking-blocked} \cite{edelstein2003contest}, \textit{blocked-pair-follows} \cite{trainin-followsCoverage-padtad09} and \textit{synchronization-pair} \cite{hong-syncTesting-issta12} defined requirements to cover during testing for exposing blocking bugs (\eg deadlocks).
+%
+%\textit{Memory access} coverage metrics such as PSet \cite{yu-pser-isca09} and def-use \cite{yang-defuse-issta98} focuses on data-access related bugs such as atomicity violation or data races.
+%
+For example, the synchronization coverage model in \cite{edelstein2003contest} defines \textit{blocking} and \textit{blocked} requirements per each synchronized block (\ie mutually exclusive section of the code that is protected by a lock).
+%
+The purpose of this requirement is to check if a test can report when there is a lock contention for two or more threads entering the synchronized block.
+%
+That is, a thread is either \textit{blocked} from entering the synchronization block or \textit{blocking} other threads from entering by holding the lock.
+%
+
+The existing concurrency coverage metrics are mostly in the context of Java and C/Pthreads and are not directly applicable to languages like Go as Go has different concurrncy primitives and semantics.
+%
+Novel coverage metrics are required to enable
+%
+Bron et. al,\cite{bron-appSyncCov-ppopp05} enumerates four major characteristics for coverage metrics to gain acceptance:
 \begin{itemize}
-    \item \textbf{Channel:} For each channel operation (make, send, receive, close), ECT includes an event with a unique id assigned to each channel.
-    \item \textbf{(RW)Mutex, WaitGroup \& Conditional Variables:} Similar to channels, we assign a unique id to each concurrency object and emit an event for each of their operations (lock, unlock, rlock, runlock, add, wait, signal, broadcast).
-    \item \textbf{Select \& Schedule:} The scheduler and the \textit{select} structure introduce non-determinism to the execution. We keep track of the decisions made by the scheduler and select statements to obtain an accurate decision path during execution.
+  \item \textbf{Fixed model:} The metric should be well-understood by the developer or tester. A static model of requirements from target program should be constructed by instrumenting the source-code. The model should maintain covered requirements during testing executions.
+  \item \textbf{Coverable and measurable requirements:} The absolute majority of reqiurements should be realistic enough to be \textit{coverable} during testing. For a few that are not coverable (due to program semantics) or not \textit{measurable} (because of technical limitations), the devloper should be aware of the reason.
+  \item \textbf{Actions for uncovered requirements:} After testing terminates, every uncovered requirement should yield an action (\eg extending testing iterations or removing dead code from the program thus removing uncoverable requirements)
+  \item \textbf{Coverage satisfaction:} Some action should be taken upon reaching a threshold of coverage percentage (e.g., testing phase termination when reaching 100\% statement coverage)
 \end{itemize}
 
-%\stcmtside{how ECT captures concurrency blocking behavior}
-
-
+Defining a new coverage metric to satisfy above characteristics requires an accurate and proper mental model of target bugs.
 %
-For each blocking operation (channels \textit{sends}/\textit{recvs}, mutex \textit{locks}, waitGroup/conditional variable \textit{wait} and \textit{select} (when none of the cases are available)), ECT captures a pair of pre-operation and post-operation events to distinguish between the \textit{request for action} and \textit{completion of action}.
+Using the \goat's infrastructure, we deep studied the underlying causes of many bugs including GoKer benchmark~\cite{yuan-gobench-cgo21} and proposed a set of coverage requirements that enables extensive analysis of dynamic behavior of concurrency primitives under various scheduling scenarios.
 %
-Hence, ECT is especially effective for debugging because it enables modeling the blocking state of program execution at any given step of execution.
-%
-More details about the implementation of trace package enhancement and scalability report are available in \cite{ect-arxiv}
-
-\begin{table}[]
-    \centering
-        \begin{tabular}{|l|l|}
-        \hline
-        \rowcolor[HTML]{C0C0C0}
-        \multicolumn{1}{|c|}{\cellcolor[HTML]{C0C0C0}\textbf{Category}} & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}\textbf{Description}} \\ \hline
-        Process & Indication of process/thread start and stop \\ \hline
-        GC/Mem & Garbage collection and memory operation events\\ \hline
-        Goroutine & Goroutines events: create, block, start, stop, end, etc. \\ \hline
-        Syscall & Interactions with system calls \\ \hline
-        Users & User annotated regions and tasks (for bounded tracing) \\ \hline
-        Misc & System related events like futile wakeup or timers \\ \hline
-        \end{tabular}
-
-    \caption{Event categories by the Go execution tracer}
-    \label{tab:events}
-\end{table}
+In section \ref{}, we describe our proposed coverage metric for testing concurrent Go which is extensible to all concurrent languages.
