--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -89,7 +89,7 @@ golang, concurrency, testing coverage analysis
 \label{sec:bg}
 \input{background.tex}
 
-\section{GOAT: Debugging}
+\section{Design and Implementation}
 \label{sec:design}
 \input{design.tex}
 
